Image width fix + body text alignment fix

--- a/src/components/containers/RMBodyContainer.css
+++ b/src/components/containers/RMBodyContainer.css
@@ -5,7 +5,6 @@
     max-height: 100%;
     overflow-y: hidden;
 
-    text-align: center;
 }
 
 .RMLogo {
@@ -13,5 +12,7 @@
     left: 50%;
     transform: translate(-50%);
     width: 20%;
+    min-width: 200px;
+    max-width: 350px;
     object-fit: contain;
 }
